--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,7 +5,7 @@ def safeExtGet(prop, fallback) {
 }
 
 android {
-    compileSdkVersion safeExtGet("buildToolsVersion", 26)
+    compileSdkVersion safeExtGet("compileSdkVersion", 26)
     buildToolsVersion safeExtGet("buildToolsVersion", "26.0.3")
 
     defaultConfig {
