--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-key-value-storage",
   "version": "3.0.4",
-  "description": "",
+  "description": "Provides an easy way to persistently store small chunks of data and then access it from the native code.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
